Try fixing modals on ios

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -736,6 +736,7 @@ h6
   pre
     display: block
     max-height: 90%
+    flex: 1
     overflow: scroll
     padding: 1em
 
